--- a/OpenCode/Base.lproj/Main.storyboard
+++ b/OpenCode/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6249" systemVersion="13F1712" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6249" systemVersion="13F1712" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Yin-2i-e30">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
     </dependencies>
@@ -247,7 +247,7 @@
         <!--RepositoryDetail-->
         <scene sceneID="qeG-OO-oD9">
             <objects>
-                <viewController title="RepositoryDetail" id="YIg-Kt-Vbb" customClass="RepositoryDetailTableViewController" customModule="OpenCode" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="RepositoryDetail" id="YIg-Kt-Vbb" customClass="RepositoryDetailViewController" customModule="OpenCode" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rmL-P4-WSP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -347,30 +347,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="详情" id="sD6-Bj-QPY"/>
-                    <connections>
-                        <outlet property="createdTimeLabel" destination="qdK-bL-eGg" id="nwb-mF-pXm"/>
-                        <outlet property="descriptionLabel" destination="4Ta-xe-1fW" id="fvY-ac-qIz"/>
-                        <outlet property="forksNumLabel" destination="Z5K-PG-Pdg" id="fdD-Bw-LRW"/>
-                        <outlet property="fullNamelabel" destination="pMq-aE-olj" id="pnc-dL-K2l"/>
-                        <outlet property="languageLabel" destination="bAU-7M-o1H" id="X0Z-Uz-FQP"/>
-                        <outlet property="openIssuesNumLabel" destination="I1a-8H-AMp" id="2Js-6B-dYj"/>
-                        <outlet property="pushedTimeLabel" destination="VGK-Fi-8Rb" id="Qbp-eE-27Y"/>
-                        <outlet property="searchDisplayController" destination="NvN-lw-iKP" id="LLu-ve-tnj"/>
-                        <outlet property="stargazersNumLabel" destination="dOs-SU-382" id="AaR-bW-b0r"/>
-                        <outlet property="watcherNumLabel" destination="Tcq-Ar-IEI" id="MUn-kg-SY5"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8tS-dN-5Oh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="NvN-lw-iKP">
-                    <connections>
-                        <outlet property="delegate" destination="YIg-Kt-Vbb" id="pMG-7e-vet"/>
-                        <outlet property="searchContentsController" destination="YIg-Kt-Vbb" id="HzH-yl-63Y"/>
-                        <outlet property="searchResultsDataSource" destination="YIg-Kt-Vbb" id="eo4-B5-UQ5"/>
-                        <outlet property="searchResultsDelegate" destination="YIg-Kt-Vbb" id="8Mz-HJ-KRy"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="2153" y="-291"/>
+            <point key="canvasLocation" x="2176" y="-291"/>
         </scene>
         <!--项目-->
         <scene sceneID="HLo-iW-19g">
@@ -1170,7 +1150,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hQv-IC-Bxc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1798" y="-291"/>
+            <point key="canvasLocation" x="1655" y="-291"/>
         </scene>
     </scenes>
     <resources>
